openshift/service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: '2018-03-06T12:32:56Z'
  labels:
    app: http-network-diagnostic
  name: http-network-diagnostic
  namespace: training
  resourceVersion: '2468172'
  selfLink: /api/v1/namespaces/training/services/http-network-diagnostic
  uid: 7f2ae0de-213a-11e8-a9ec-0050569f494a
spec:
  clusterIP: 172.30.166.77
  ports:
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: 9009-tcp
      port: 9009
      protocol: TCP
      targetPort: 9009
  selector:
    app: http-network-diagnostic
    deploymentconfig: http-network-diagnostic
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
